tests/NormalTests/paczka1/small_fuzzy/34342394.err
Error in line 4: A766 S681 59,7
Error in line 14: 6gTwAaDgc S795 5,71
